--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@sendgrid/helpers": "^6.2.1",
     "@sendgrid/mail": "^6.2.1",
+    "@sentry/node": "^4.1.1",
     "vsts-task-lib": "^2.4.0"
   },
   "devDependencies": {
